# WhereIsMyMoney

./: .env.example  .gitignore  CASCADE_DELETE_FIX_SUMMARY.md  CSV_ANALYSIS_REPORT.md  Dockerfile.production  FINAL_VERIFICATION_SUMMARY.txt  LAST_30_DAYS_FIX_SUMMARY.md  LICENSE  PARSER_VERIFICATION_LOG.md  README.md  SETUP.md  deploy-ec2.sh  docker-compose.yml  nginx.conf  pyproject.toml  test_csv_parse.py
backend/: .env.example  Dockerfile  alembic.ini  requirements-lite.txt  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  demo_merchant_fix.py  run_tests.py  test_ai_summary_tabs.py  test_analytics.py  test_auto_migration.py  test_budget_suggestions.py  test_classification.py  test_classification_jobs.py  test_clear_all_data.py  test_excel_parsing.py  test_generic_parser.py  test_integration_api_fix.py  test_integration_e2e.py  test_merchant_extractor.py  test_migration_integration.py  test_ml_batching.py  test_revolut_parser.py  test_transaction_explainer.py  test_transactions.py  test_upload.py  validate_fix.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: AppShell.tsx  CategoryBadge.tsx  ClassificationProgressBanner.tsx  CurrencySelector.tsx  ErrorBoundary.tsx  FileUploadDropzone.tsx  LoadingSkeletons.tsx  SessionProvider.tsx  Sidebar.tsx  ThemeToggle.tsx  TransactionExplainModal.tsx  TransactionTable.tsx  TransactionTotalsBar.tsx
frontend/lib/: api.ts  auth.ts  (+4 more)
shared/: README.md
(+81 files in other folders)
