[project]
name = "whereismymoneygoing"
version = "1.0.0"
description = "Personal finance transaction classification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "tokenizers>=0.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
